fixed unresponsive nav-collapse issue

--- a/public/angular-bootstrap/bootstrap-twit/customCSS/responsiveHomepage.css
+++ b/public/angular-bootstrap/bootstrap-twit/customCSS/responsiveHomepage.css
@@ -5,6 +5,11 @@
     #homepageNavBarSection {
         margin-bottom: -45px;
     }
+
+    .navbar-collapse {
+        /*min-height: 200px;*/
+        height: 160px;
+    }
 }
 /*END NAVIGATION STYLING*/
 
